--- a/01-Introduction/01-RMarkdown-Exercises.Rmd
+++ b/01-Introduction/01-RMarkdown-Exercises.Rmd
@@ -4,7 +4,7 @@ title: "R Markdown"
 
 This is an R Markdown file. It contains plain text interspersed with grey chunks of code. You can use the file to take notes _and_ run code. For example, you can write your name on the line below. Try it: 
 
-
+Ali Greenholt's R Markdown File
 
 ```{r}
 # You can write code in chunks that look like this.
@@ -24,6 +24,9 @@ To add a new code chunk, press *Cmd+Option+I* (*Ctrl+Alt+I* on Windows), or clic
 
 Try making a code chunk below:
 
+```{r}
+#Made this chunk using the shortcut. 
+```
 
 
 Good job! For today, you should place all of your R code inside of code chunks.
@@ -43,12 +46,14 @@ warning("You shouldn't run this!")
 # You can click the downward facing arrow to the left of the play button to run
 # every chunk above the current code chunk. This is useful if the code in your
 # chunk uses object that you made in previous chunks.
-# Sys.Date()
+Sys.Date()
 ```
 
 Did you notice the green lines in the code chunk above? They are *code comments*, lines of text that R ignores when it runs the code. R will treat everything that appears after `#` on a line as a code comment. As a result, if you run the chunk above, nothing will happen—it is all code comments (and that's fine)!
 
 Remove the `#` on the last line of the chunk above and then rerun the chunk. Can you tell what `Sys.Date()` does?
+
+_Sys.Date() gives the current date._
 
 By the way, you only need to use code comments _inside_ of code chunks. R knows not to try to run the text that you write outside of code chunks.
 
