--- a/06-Report/06-Report-Exercise.Rmd
+++ b/06-Report/06-Report-Exercise.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Garrett"
+title: "Ali"
 output: pdf_document
 ---
 
@@ -9,7 +9,7 @@ library(babynames)
 
 name_data <- 
   babynames %>% 
-  filter(name == "Garrett") %>% 
+  filter(name == "Ali") %>% 
   mutate(sex = case_when(sex == "M" ~ "Male", 
                          sex == "F" ~ "Female"))
 
@@ -26,6 +26,8 @@ most_sex <- most %>%
   pull("sex") %>% 
   switch("Male" = "boys", "Female" = "girls")
 
+
+
 # Has the name been a boy's or girl's name?
 sex <-
   name_data %>% 
@@ -36,14 +38,14 @@ sex <-
   switch("Male" = "boy's", "Female" = "girl's")
 ```
 
-There have been **TODO** children named Garrett. The name Garrett was most popular in TODO, when TODO TODO were named Garrett. Garrett is traditionally a TODO name.
+There have been **`r n`** children named Ali. The name Ali was most popular in `r most$year`, when `r most$n` `r most_sex` were named Ali. Ali is traditionally a `r sex` name.
 
-```{r}
+```{r echo=FALSE}
 name_data %>% 
   ggplot() +
     geom_ribbon(mapping = aes(x = year, ymax = prop, fill = sex), ymin = 0, alpha = 0.5) +
-    labs(title = "Popularity of the name Garrett", 
-         subtitle = "The proportion of boys and girls named Garrett, 1880-2017", 
+    labs(title = "Popularity of the name Ali", 
+         subtitle = "The proportion of boys and girls named Ali, 1880-2017", 
          caption = "Data from the US Social Security Administration",
          y = "proportion") +
     theme_bw()
